--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,10 +53,12 @@ dependencies {
     def androidx_lifecycle = "2.2.0"
     def androidx_version = "1.1.0"
     def dagger_version = "2.22"
+    def glide_version = "4.12.0"
     def material_design = "1.3.0"
-    def mockk_version ="1.9.3"
+    def mockk_version = "1.9.3"
     def rxandroid_version = "2.0.1"
     def rxjava_version = "2.0.1"
+    def work_version = "2.5.0"
 
     //----Implementation-----//
 
@@ -73,6 +75,10 @@ dependencies {
     annotationProcessor "com.google.dagger:dagger-android-processor:$dagger_version"
     kapt "com.google.dagger:dagger-android-processor:$dagger_version"
     kapt "com.google.dagger:dagger-compiler:$dagger_version"
+
+    //glide
+    implementation "com.github.bumptech.glide:glide:$glide_version"
+    annotationProcessor "com.github.bumptech.glide:compiler:$glide_version"
 
     //material design
     implementation "com.google.android.material:material:$material_design"
@@ -92,4 +98,24 @@ dependencies {
 
     //rxJava
     implementation "io.reactivex.rxjava2:rxjava:$rxjava_version"
+
+    //<---- Work Manager Dependency -->
+    // (Java only)
+    implementation "androidx.work:work-runtime:$work_version"
+
+    // Kotlin + coroutines
+    implementation "androidx.work:work-runtime-ktx:$work_version"
+
+    // optional - RxJava2 support
+    implementation "androidx.work:work-rxjava2:$work_version"
+
+    // optional - GCMNetworkManager support
+    implementation "androidx.work:work-gcm:$work_version"
+
+    // optional - Test helpers
+    androidTestImplementation "androidx.work:work-testing:$work_version"
+
+    // optional - Multiprocess support
+    implementation "androidx.work:work-multiprocess:$work_version"
+    //<--- End of Work Manager Dependency ---->
 }
